tests/compile-fail/integration_suite__integration__anm_features__meta_sprite_id_circular_dependency.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: cycle in const definition
   ┌─ <input>:29:9
   │
29 │         coolSprite: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: bestSprite * 3},
   │         ^^^^^^^^^^ cyclic const
30 │         bestSprite: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: coolestSprite * 3},
31 │         coolestSprite: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: coolSprite + 1},
   │                                                                 ---------- depends on its own value here


